@@ -1,3 +1,7 @@
+2024-02-19  Boruch Baum  <boruch_baum@gmx.com>
+
+	*  (diredc--version): New variable.
+
 2024-01-31  Boruch Baum  <boruch_baum@gmx.com>
 
 	* diredc.el (diredc-shell--bind-keys): Collect bindings in a
